feat: implemented task controller and refactored withContext function
